// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerComponent should render correctly 1`] = `
<ng-component>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
  >
    <date-picker
      class="ng-untouched ng-pristine ng-valid"
      name="startDate"
      ngmodel=""
    >
      <div
        class="datepicker"
      >
        <div
          class="flex-column"
        >
          <pdk-date-input
            class="ng-untouched ng-pristine ng-invalid"
            name="datePicker"
            picker=""
            required=""
          >
            <pdk-interaction-container>
              <div>
                <div
                  class="pdk-date-input"
                >
                  <div
                    class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                  >
                    <div
                      class="govuk-date-input__item"
                    >
                      <label
                        class="govuk-date-input__label govuk-label"
                        for="startDate-day"
                        pdk-label=""
                      >
                         Day 
                      </label>
                      <input
                        aria-describedby="date"
                        autocomplete="off"
                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="day"
                        id="startDate-day"
                        name="dateDay"
                        required=""
                        type="number"
                      />
                    </div>
                    <div
                      class="govuk-date-input__item"
                    >
                      <label
                        class="govuk-date-input__label govuk-label"
                        for="startDate-month"
                        pdk-label=""
                      >
                         Month 
                      </label>
                      <input
                        autocomplete="off"
                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="month"
                        id="startDate-month"
                        name="dateMonth"
                        required=""
                        type="number"
                      />
                    </div>
                    <div
                      class="govuk-date-input__item"
                    >
                      <label
                        class="govuk-date-input__label govuk-label"
                        for="startDate-year"
                        pdk-label=""
                      >
                         Year 
                      </label>
                      <input
                        autocomplete="off"
                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                        formcontrolname="year"
                        id="startDate-year"
                        name="dateYear"
                        required=""
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="pdk-!-negative-margin-left-2"
                    pdk-margin-left="-2"
                  >
                    <pdk-date-picker-toggle>
                      <pdk-interaction-container>
                        <div>
                          <div
                            aria-expanded="false"
                            aria-label="Toggle date picker"
                            class="pdk-date-picker__toggle"
                            role="button"
                            tabindex="0"
                          >
                            <pdk-date-picker-icon
                              style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: center;"
                              >
                                <i
                                  style="height: 28px; width: 28px; fill: #333;"
                                >
                                  <svg
                                    viewBox="0 0 448 512"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                    />
                                  </svg>
                                </i>
                              </div>
                            </pdk-date-picker-icon>
                          </div>
                        </div>
                      </pdk-interaction-container>
                    </pdk-date-picker-toggle>
                  </div>
                </div>
              </div>
            </pdk-interaction-container>
          </pdk-date-input>
        </div>
      </div>
    </date-picker>
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
    />
  </form>
</ng-component>
`;

exports[`DatePickerComponent should render correctly after selecting the right date 1`] = `
<ng-component>
  <form
    class="ng-untouched ng-valid ng-dirty"
    novalidate=""
  >
    <date-picker
      class="ng-untouched ng-valid ng-dirty"
      name="startDate"
      ngmodel=""
    >
      <div
        class="datepicker"
      >
        <div
          class="flex-column"
        >
          <pdk-date-input
            class="ng-untouched ng-pristine ng-invalid"
            name="datePicker"
            picker=""
            required=""
          >
            <pdk-interaction-container>
              <div>
                <div
                  class="pdk-date-input"
                >
                  <div
                    class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                  >
                    <div
                      class="govuk-date-input__item"
                    >
                      <label
                        class="govuk-date-input__label govuk-label"
                        for="startDate-day"
                        pdk-label=""
                      >
                         Day 
                      </label>
                      <input
                        aria-describedby="date"
                        autocomplete="off"
                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="day"
                        id="startDate-day"
                        name="dateDay"
                        required=""
                        type="number"
                      />
                    </div>
                    <div
                      class="govuk-date-input__item"
                    >
                      <label
                        class="govuk-date-input__label govuk-label"
                        for="startDate-month"
                        pdk-label=""
                      >
                         Month 
                      </label>
                      <input
                        autocomplete="off"
                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="month"
                        id="startDate-month"
                        name="dateMonth"
                        required=""
                        type="number"
                      />
                    </div>
                    <div
                      class="govuk-date-input__item"
                    >
                      <label
                        class="govuk-date-input__label govuk-label"
                        for="startDate-year"
                        pdk-label=""
                      >
                         Year 
                      </label>
                      <input
                        autocomplete="off"
                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                        formcontrolname="year"
                        id="startDate-year"
                        name="dateYear"
                        required=""
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="pdk-!-negative-margin-left-2"
                    pdk-margin-left="-2"
                  >
                    <pdk-date-picker-toggle>
                      <pdk-interaction-container>
                        <div>
                          <div
                            aria-expanded="false"
                            aria-label="Toggle date picker"
                            class="pdk-date-picker__toggle"
                            role="button"
                            tabindex="0"
                          >
                            <pdk-date-picker-icon
                              style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: center;"
                              >
                                <i
                                  style="height: 28px; width: 28px; fill: #333;"
                                >
                                  <svg
                                    viewBox="0 0 448 512"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                    />
                                  </svg>
                                </i>
                              </div>
                            </pdk-date-picker-icon>
                          </div>
                        </div>
                      </pdk-interaction-container>
                    </pdk-date-picker-toggle>
                  </div>
                </div>
              </div>
            </pdk-interaction-container>
          </pdk-date-input>
          <pdk-inset-text
            class="govuk-!-margin-top-5 govuk-!-margin-bottom-1"
            pdk-margin-bottom="1"
            pdk-margin-top="5"
            role="status"
          >
            <div
              class="govuk-inset-text"
            >
               Selected day: Monday 
            </div>
          </pdk-inset-text>
        </div>
      </div>
    </date-picker>
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
    />
  </form>
</ng-component>
`;
